--- a/package.json
+++ b/package.json
@@ -7,17 +7,16 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
+    "test": "vitest run",
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@types/node": "^24.0.13",
+    "@vitest/coverage-v8": "3.2.4",
+    "happy-dom": "^18.0.1",
     "typescript": "~5.8.3",
     "unocss": "^66.3.3",
-    "vite": "^7.0.3",
-    "vitest": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4",
-    "jsdom": "^23.0.1"
+    "vite": "^6.2.4",
+    "vitest": "^3.2.4"
   }
 }
