--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   },
   "devDependencies": {
     "@types/node": "^24.0.13",
+    "@vitejs/plugin-react": "^4.6.0",
     "@vitest/coverage-v8": "3.2.4",
     "happy-dom": "^18.0.1",
     "typescript": "~5.8.3",
     "unocss": "^66.3.3",
     "vite": "^6.2.4",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6"
+  },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
